fix: nav article sections visibility

--- a/app/global.css
+++ b/app/global.css
@@ -119,6 +119,7 @@
 
 #nd-nav, #nd-tocnav {
 	top: calc(var(--fd-banner-height) + var(--fd-nav-height) + 48px) !important;
+	z-index: 10;
 }
 
 /* CUSTOM COLORS */
